# src/Controller/User/Login/LoginController.php
@@ -10,6 +10,7 @@ use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\Routing\Annotation\Route;
+use Throwable;
 
 class LoginController extends AbstractController
 {
@@ -28,8 +29,16 @@ class LoginController extends AbstractController
             return $this->json(
                 $this->authManager->signIn($request->request->get('email'), $request->request->get('password'))
             );
-        } catch (\Throwable) {
+        } catch (Throwable) {
             throw UnauthorizedException::invalidCredentials();
         }
+    }
+
+    #[Route('/api/v1/access-token', name: 'get-access-token', methods: ['POST'])]
+    public function updateAccessTokenWithRefreshToken(
+        Request $request,
+        AuthManager $authManager
+    ): string {
+        return $this->json($authManager->updateAccessTokenWithRefreshToken($request->request->get('refresh_token')));
     }
 }
